
Package: R.devices
==================

Version: 2.1.3 [2012-11-17]
o CLEANUP: Only importing what is necessary from R.methodsS3 and R.oo.
o CLEANUP: Made all integer constants truly integers.


Version: 2.1.2 [2012-08-21]
o DOCUMENTATION: Fixed minor typo in the vignette.
o DOCUMENTATION: In help(devEval) the link to help(devNew) was broken.
o Updated versions of the package dependencies.


Version: 2.1.1 [2012-05-01]
o Now devOptions() returns options invisibly if some options were set,
  otherwise not, e.g. devOptions() versus devOptions("png", width=1024).
o Added a first draft of a package vignette.


Version: 2.1.0 [2012-04-27]
o Merged updates from the R.utils v1.13.1.


Version: 2.0.0 [2011-11-05]
o Created package by extracting all methods in R.utils v1.9.1 that
  are related to graphical devices.
o The below change log shows the changes to the device methods while
  they were in R.utils.  For this reason, we choose to set the version
  of this package such that it starts where we left R.utils.


Version: 1.9.1 [2011-11-05]
o Added devOptions().
o Added default 'width' and 'height' values to eps().
o Turned png2() and jpeg2() into plain functions without a generic.  
  This is consistent with how eps() is defined.
o GENERALIZATION: Now the default 'width' is inferred from 
  devOptions() if needed.
o DOCUMENTATION: Added an example to help(devEval).


Version: 1.8.6 [2011-10-31]
o Added argument 'field' to devEval().


Version: 1.8.2 [2011-09-24]
o devNew() no longer gives a warning about argument 'aspectRatio' is
  specified when both or neither of 'width' and 'height' are given,
  and 'aspectRatio' is 1.


Version: 1.7.5 [2011-04-12]
o Now devEval("jpg", ...) is recognized as devEval("jpeg", ...).


Version: 1.7.3 [2011-04-02]
o Now argument 'force' of devEval() defaults to 
  getOption("devEval/args/force", TRUE).


Version: 1.7.2 [2011-03-18]
o Now argument 'path' of devEval() defaults to 
  getOption("devEval/args/path", "figures/").