@@ -3,7 +3,6 @@
 # - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -  
 importFrom("R.methodsS3", "throw")
 
-importFrom("R.oo", "trim")
 importFrom("R.oo", "Package")
 importFrom("R.oo", "getPosition")
 importFrom("R.oo", "getName")
