@@ -3,6 +3,7 @@ Package: R.devices
 ==================
 
 Version: 2.1.3 [2012-11-17]
+o CONSISTENCY: Now using throw() instead of stop() everywhere.
 o CLEANUP: Only importing what is necessary from R.methodsS3 and R.oo.
 o CLEANUP: Made all integer constants truly integers.
 
